RESOLVED FIXED276247
[GStreamer] Fix uint structure field serialization to JSON
https://bugs.webkit.org/show_bug.cgi?id=276247
Summary [GStreamer] Fix uint structure field serialization to JSON
Philippe Normand
Reported 2024-07-05 02:14:42 PDT
.
Attachments
Philippe Normand
Comment 1 2024-07-05 02:17:15 PDT
EWS
Comment 2 2024-07-05 05:08:30 PDT
Committed 280682@main (758f24c80d6a): <https://commits.webkit.org/280682@main> Reviewed commits have been landed. Closing PR #30511 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-05 05:09:13 PDT
Note You need to log in before you can comment on or make changes to this bug.