[GStreamer] Fix uint structure field serialization to JSON https://bugs.webkit.org/show_bug.cgi?id=276247

Reviewed by Xabier Rodriguez-Calvar.

Converting an uint to int can lead to integer overflow, so use double instead.

* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::gstStructureValueToJSON):
* Tools/TestWebKitAPI/Tests/WebCore/gstreamer/GStreamerTest.cpp:
(TestWebKitAPI::TEST_F):

Canonical link: https://commits.webkit.org/280682@main